--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-    "name": "MyApp",
-    "version": "0.1.1",
-    "description": "Sample CoffeeScript Application",
-    "author": "Ray Villalobos",
-    "devDependencies": {
-        "gulp": "^3.8.10",
-        "gulp-coffee": "^2.2.0",
-        "gulp-concat": "^2.4.3",
-        "gulp-livereload": "^3.2.0",
-        "gulp-ruby-sass": "^0.7.1",
-        "gulp-uglify": "^1.0.2",
-        "gulp-util": "^3.0.1"
-    }
+  "name": "MyApp",
+  "version": "0.1.1",
+  "description": "Sample CoffeeScript Application",
+  "author": "Andy Brooks",
+  "devDependencies": {
+    "gulp": "^3.8.10",
+    "gulp-coffee": "^2.2.0",
+    "gulp-concat": "^2.4.3",
+    "gulp-livereload": "^3.2.0",
+    "gulp-ruby-sass": "^0.7.1",
+    "gulp-uglify": "^1.0.2",
+    "gulp-util": "^3.0.1",
+    "tiny-lr": "^0.2.1"
+  }
 }
